--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="/user-pc/cwebassets-pc/ckeditor/ckeditor.js"></script>
+    <script src="/user-pc/cwebassets-pc/spark-md5.min.js"></script>
   </body>
 </html>
