--- a/cwebassets-pc/preview.html
+++ b/cwebassets-pc/preview.html
@@ -24,70 +24,34 @@
         min-height: 667px;
         max-height: 100vh;
         background-color: #ffffff;
+        overflow-wrap: break-word;
       }
+      
     </style>
     <style>
-      .article-content{
-        margin:0 15px;
+      .easyimage{
+        margin-bottom:12px;
+        max-width: 100%;
+        margin: 0 0 16px 0;
       }
-      .article-content img{
-        max-width:100% !important;
-        display:block;
+      .easyimage img{
+        display: block;
+        width: 100%;
       }
-      .article-content img.default{
-        background:#f0f0f0;
-      }
-      .article-content p{
-        -webkit-margin-before: 0;
-        -webkit-margin-after: 0;
-      }
-      .article-content h1,
-      .article-content h2,
-      .article-content h3,
-      .article-content h4,
-      .article-content h5,
-      .article-content h6{
-        -webkit-margin-before: 0;
-        -webkit-margin-after: 0;
-        font-size:17px;
-      }
-      .article-content.toutiaohao{
-        line-height:1.5;
-        font-size:17px;
-      }
-      /*今日头条图片说明样式*/
-      .article-content.toutiaohao .pgc-img-caption{
+      .easyimage figcaption {
+        display: block;
+        background-color: #f7f7f7;
+        border: 1px solid #f7f7f7;
+        color: #333;
         text-align: center;
-        color: #777;
-        font-size: 12px;
-        line-height: 16px;
-        margin-top: 8px;
-        margin-bottom: 15px;
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        overflow-wrap: break-word;
+        padding: .8em;
       }
-      .article-content.toutiaohao p{
-        margin:10px 0;
-      }
-      .article-content.toutiaohao img{
-        display:block;
-        margin:4px auto;
-      }
-      .article-content.toutiaohao blockquote {
-        font-size: 16px;
-        line-height: 22px;
-        padding: 15px;
-        color: #999;
-        border: 1px solid #E8E8E8;
-        background: #F4F5F6;
-        -webkit-margin-before: 0;
-        -webkit-margin-after: 0;
-        -webkit-margin-start: 0;
-        -webkit-margin-end: 0;
-      }
-      .article-content.toutiaohao blockquote p{
-        font-size: 16px;
-        line-height: 22px;
-        margin: 10px !important;
-        color: #505050;
+      .no-content{
+        display:none !important
       }
     </style>
   </head>
@@ -98,6 +62,6 @@
     <noscript>
       你必须启用JavaScript才能浏览此内容。
     </noscript>
-    <div id="preview" class="article-content toutiaohao">正在生成预览...</div>
+    <div id="preview" class="">正在生成预览...</div>
   </body>
 </html>
