--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="/pch5/cwebassets-pc/spark-md5.min.js"></script>
+    <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/spark-md5.min.js'%>"></script>
 
     <!-- 源码版js -->
-    <!-- <script src="/pch5/cwebassets-pc/ckeditor/ckeditor.js"></script> -->
+    <!-- <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/ckeditor.js'%>"></script> -->
 
     <!-- 编译版js -->
-    <script src="/pch5/cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js"></script>
+    <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js'%>"></script>
   </body>
 </html>
