--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <!-- <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/ckeditor.js'%>"></script> -->
 
     <!-- 编译版js -->
-    <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js'%>"></script>
+    <!-- <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js'%>"></script> -->
+
+    <!-- 源码版js -->
+    <!-- <script src="/pch5/cwebassets-pc/ckeditor/ckeditor.js"></script> -->
+
+    <!-- 编译版js -->
+    <script src="/pch5/cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js"></script>
   </body>
 </html>
