--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <!-- <script src="<%=process.env.ASSETS_PUBLIC_PATH+'cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js'%>"></script> -->
 
     <!-- 源码版js -->
-    <!-- <script src="/pch5/cwebassets-pc/ckeditor/ckeditor.js"></script> -->
+    <!-- <script src="/cwebassets-pc/ckeditor/ckeditor.js"></script> -->
 
     <!-- 编译版js -->
-    <script src="/pch5/cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js"></script>
+    <!-- 因使用cdn回源 所以每次js修改时 都需要更改文件名（如果不改文件名 则不会回源使用新的js）-->
+    <script src="/cwebassets-pc/ckeditor/dev/builder/release/ckeditor/ckeditor.js"></script>
   </body>
 </html>
